[package]
name = "osquery_types"
version = "0.1.1"
authors = ["Insanitybit <insanitybit@gmail.com>"]
edition = "2018"

description = "Common structures for OSQuery tables"
license = "MIT"
keywords = ["osquery", "grapl"]


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.39"
